Remove Row e adiciona Classe para itens em Skill

--- a/index.html
+++ b/index.html
@@ -186,19 +186,19 @@
                     </div>
                 </div>
             </div>
-            <div class="row-s col-s-10">
+            <div class="  col-s-10">
                 <nav class="skill-nav">
                     <ul class="skill-menu">
-                        <li data-skill="item">HTML</li>
-                        <li data-skill="item">CSS3</li>
-                        <li data-skill="item">Bootstrap</li>
-                        <li data-skill="item">JavaScript</li>
-                        <li data-skill="item">Git</li>
-                        <li data-skill="item">NPM</li>
-                        <li data-skill="item">PHP</li>
-                        <li data-skill="item">SQL</li>
-                        <li data-skill="item">Wordpress</li>
-                        <li data-skill="item">CodeIgniter</li>
+                        <li data-skill="item" class="ativo"> HTML</li>
+                        <li data-skill="item"> CSS3</li>
+                        <li data-skill="item"> Bootstrap</li>
+                        <li data-skill="item"> JavaScript</li>
+                        <li data-skill="item"> Git</li>
+                        <li data-skill="item"> NPM</li>
+                        <li data-skill="item"> PHP</li>
+                        <li data-skill="item"> SQL</li>
+                        <li data-skill="item"> Wordpress</li>
+                        <li data-skill="item"> CodeIgniter</li>
                     </ul>
                 </nav>
                 <div class="skill-items">
@@ -252,6 +252,56 @@
                             quisquam veniam sed libero. Mollitia deserunt dolor vel!
                         </p>
                     </article>
+                    <article data-skill="texto" class="ativo">
+                            <p>
+                                1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex porro quibusdam nulla
+                                deserunt excepturi, laudantium harum laboriosam impedit earum voluptate eaque minima
+                                quisquam veniam sed libero. Mollitia deserunt dolor vel!
+                            </p>
+                            <p>
+                                1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex porro quibusdam nulla
+                                deserunt excepturi, laudantium harum laboriosam impedit earum voluptate eaque minima
+                                quisquam veniam sed libero. Mollitia deserunt dolor vel!
+                            </p>
+                            <p>
+                                1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex porro quibusdam nulla
+                                deserunt excepturi, laudantium harum laboriosam impedit earum voluptate eaque minima
+                                quisquam veniam sed libero. Mollitia deserunt dolor vel!
+                            </p>
+                            <p>
+                                1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex porro quibusdam nulla
+                                deserunt excepturi, laudantium harum laboriosam impedit earum voluptate eaque minima
+                                quisquam veniam sed libero. Mollitia deserunt dolor vel!
+                            </p>
+                        </article>
+                        <article data-skill="texto">
+                            <p>
+                                2 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex porro quibusdam nulla
+                                deserunt excepturi, laudantium harum laboriosam impedit earum voluptate eaque minima
+                                quisquam veniam sed libero. Mollitia deserunt dolor vel!
+                            </p>
+                        </article>
+                        <article data-skill="texto">
+                            <p>
+                                3 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex porro quibusdam nulla
+                                deserunt excepturi, laudantium harum laboriosam impedit earum voluptate eaque minima
+                                quisquam veniam sed libero. Mollitia deserunt dolor vel!
+                            </p>
+                        </article>
+                        <article data-skill="texto">
+                            <p>
+                                4 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex porro quibusdam nulla
+                                deserunt excepturi, laudantium harum laboriosam impedit earum voluptate eaque minima
+                                quisquam veniam sed libero. Mollitia deserunt dolor vel!
+                            </p>
+                        </article>
+                        <article data-skill="texto">
+                            <p>
+                                5 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex porro quibusdam nulla
+                                deserunt excepturi, laudantium harum laboriosam impedit earum voluptate eaque minima
+                                quisquam veniam sed libero. Mollitia deserunt dolor vel!
+                            </p>
+                        </article>
                 </div>
             </div>
 
