--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
             </div>
         </section>
 
-        <section class="sobre container" id="sobre">
-            <header>
+        <!-- SOBRE -->
+        <section class="container section-sobre" id="sobre">
+            <header class="sobre-header">
                 <h2 class="sobre-titulo">Sobre</h2>
             </header> 
 
@@ -58,9 +59,6 @@
                     <div class="js-carrosselRail">
 
                         <article class="js-carrosselItem">
-                            <div class="sobre-icone">
-                                <img src="assets/icone/chart-bar-regular.svg" alt="">
-                            </div>
                             <header>
                                 <h3 class="subsobre-titulo">Analytic</h3>
                             </header>
@@ -72,9 +70,6 @@
                         </article>
 
                         <article class="js-carrosselItem">
-                            <div class="sobre-icone">
-                                <img src="assets/icone/chart-bar-regular.svg" alt="">
-                            </div>
                             <header>
                                 <h3 class="subsobre-titulo">Analytic</h3>
                             </header>
@@ -86,9 +81,6 @@
                         </article>
 
                         <article class="js-carrosselItem">
-                            <div class="sobre-icone">
-                                <img src="assets/icone/chart-bar-regular.svg" alt="">
-                            </div>
                             <header>
                                 <h3 class="subsobre-titulo">Analytic</h3>
                             </header>
@@ -105,80 +97,169 @@
 
         </section>
 
-
-
-
-        <section class="frase container row">
-            <p class="frase-content">
-                Suas chances de sucesso aumentam ou diminuem na mesma proporção da sua confiança para dar o próximo
-                passo
-            </p>
-            <cite class="frase-citacao">By Anderson</cite>
+        <!-- SKILL -->
+        <section class="container section-skill" id="skill">
+            <header class="skill-header">
+                <h2 class="skill-titulo">Skills</h2>
+            </header> 
+            <div class="row">
+                <article class="col-6 col-s-3 skill-card">
+                    <div class="card-inner">
+                        <div class="skill-card-front">
+                            <picture class="skill-icone">
+                                <img src="assets/icone/code.svg" alt="Icone">
+                            </picture>
+                            <p class="skill-nome">HTML</p>
+                        </div>
+                        <div class="skill-card-back">
+                            <p>
+                                A semantica de toda a marcação com o HTML esta cada vez mais importante principalmente por causa dos indexadores e buscadores modernos
+                            </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="col-6 col-s-3 skill-card">
+                    <div class="card-inner">
+                        <div class="skill-card-front">
+                            <picture class="skill-icone">
+                                <img src="assets/icone/code.svg" alt="Icone">
+                            </picture>
+                            <p class="skill-nome">CSS</p>
+                        </div>
+                        <div class="skill-card-back">
+                            <p>
+                                O css esta cada vez mais amigavel, podendo animar, criar paginas flexiveis ou até mesmo usar o grid layout que facilida a criação de layout personalizado
+                            </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="col-6 col-s-3 skill-card">
+                    <div class="card-inner">
+                        <div class="skill-card-front">
+                            <picture class="skill-icone">
+                                <img src="assets/icone/code.svg" alt="Icone">
+                            </picture>
+                            <p class="skill-nome">HTML</p>
+                        </div>
+                        <div class="skill-card-back">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta itaque numquam cupiditate temporibus animi quae consequatur, ipsam architecto. Repudiandae facilis omnis optio, eius non natus repellendus aliquid aliquam illo earum?
+                            </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="col-6 col-s-3 skill-card">
+                    <div class="card-inner">
+                        <div class="skill-card-front">
+                            <picture class="skill-icone">
+                                <img src="assets/icone/code.svg" alt="Icone">
+                            </picture>
+                            <p class="skill-nome">HTML</p>
+                        </div>
+                        <div class="skill-card-back">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta itaque numquam cupiditate temporibus animi quae consequatur, ipsam architecto. Repudiandae facilis omnis optio, eius non natus repellendus aliquid aliquam illo earum?
+                            </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="col-6 col-s-3 skill-card">
+                    <div class="card-inner">
+                        <div class="skill-card-front">
+                            <picture class="skill-icone">
+                                <img src="assets/icone/code.svg" alt="Icone">
+                            </picture>
+                            <p class="skill-nome">HTML</p>
+                        </div>
+                        <div class="skill-card-back">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta itaque numquam cupiditate temporibus animi quae consequatur, ipsam architecto. Repudiandae facilis omnis optio, eius non natus repellendus aliquid aliquam illo earum?
+                            </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="col-6 col-s-3 skill-card">
+                    <div class="card-inner">
+                        <div class="skill-card-front">
+                            <picture class="skill-icone">
+                                <img src="assets/icone/code.svg" alt="Icone">
+                            </picture>
+                            <p class="skill-nome">HTML</p>
+                        </div>
+                        <div class="skill-card-back">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta itaque numquam cupiditate temporibus animi quae consequatur, ipsam architecto. Repudiandae facilis omnis optio, eius non natus repellendus aliquid aliquam illo earum?
+                            </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="col-6 col-s-3 skill-card">
+                    <div class="card-inner">
+                        <div class="skill-card-front">
+                            <picture class="skill-icone">
+                                <img src="assets/icone/code.svg" alt="Icone">
+                            </picture>
+                            <p class="skill-nome">HTML</p>
+                        </div>
+                        <div class="skill-card-back">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta itaque numquam cupiditate temporibus animi quae consequatur, ipsam architecto. Repudiandae facilis omnis optio, eius non natus repellendus aliquid aliquam illo earum?
+                            </p>
+                        </div>
+                    </div>
+                </article>
+                <article class="col-6 col-s-3 skill-card">
+                    <div class="card-inner">
+                        <div class="skill-card-front">
+                            <picture class="skill-icone">
+                                <img src="assets/icone/code.svg" alt="Icone">
+                            </picture>
+                            <p class="skill-nome">HTML</p>
+                        </div>
+                        <div class="skill-card-back">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta itaque numquam cupiditate temporibus animi quae consequatur, ipsam architecto. Repudiandae facilis omnis optio, eius non natus repellendus aliquid aliquam illo earum?
+                            </p>
+                        </div>
+                    </div>
+                </article>
+            </div>
         </section>
 
-        <!-- <section class="referencia" id="referencia">
-            <header>
-                <h2 class="referencia-titulo">Referencias de estudos e leituras</h2>
-            </header>
-            <div class="referencia-content">
-                <div class="referencia-item right">
-                    <span class="referencia-itemData">data</span>
-                    <h3 class="referencia-itemTitulo">titulo</h3>
-                    <p class="referencia-itemDescricao">texto alternativo</p>
-                </div>
-                <div class="referencia-item left">
-                    <span class="referencia-itemData">data</span>
-                    <h3 class="referencia-itemTitulo">titulo</h3>
-                    <p class="referencia-itemDescricao">texto alternativo</p>
-                </div>
-                <div class="referencia-item right">
-                    <span class="referencia-itemData">data</span>
-                    <h3 class="referencia-itemTitulo">titulo</h3>
-                    <p class="referencia-itemDescricao">texto alternativo</p>
-                </div>
-                <div class="referencia-item left">
-                    <span class="referencia-itemData">data</span>
-                    <h3 class="referencia-itemTitulo">titulo</h3>
-                    <p class="referencia-itemDescricao">texto alternativo</p>
-                </div>
-                <div class="referencia-item right">
-                    <span class="referencia-itemData">data</span>
-                    <h3 class="referencia-itemTitulo">titulo</h3>
-                    <p class="referencia-itemDescricao">texto alternativo</p>
-                </div>
-                <div class="referencia-item left">
-                    <span class="referencia-itemData">data</span>
-                    <h3 class="referencia-itemTitulo">titulo</h3>
-                    <p class="referencia-itemDescricao">texto alternativo</p>
-                </div>
-                <div class="referencia-item right">
-                    <span class="referencia-itemData">data</span>
-                    <h3 class="referencia-itemTitulo">titulo</h3>
-                    <p class="referencia-itemDescricao">texto alternativo</p>
-                </div>
+        <!-- FRASE -->
+        <section class="section-frase">
+            <div class="container row frase">
+
+                <p class="frase-content">
+                    Suas chances de sucesso aumentam ou diminuem na mesma proporção da sua confiança para dar o próximo
+                    passo
+                </p>
+                <cite class="frase-citacao">By Anderson</cite>
+
             </div>
-        </section> -->
+        </section>
+
 
         <section class="section-skill container" id="skill">
             <header>
                 <h2 class="skill-titulo">My Skills</h2>
             </header>
             <div class="row">
-                <div class="col-12 col-m-4">
+                <div class="col-12 col-m-4 js-animou" data-anima="up">
                     <div class="skill-item">
                         <p class="skill-nome">HTML</p>
                         <div class="skill-barra"> <span class="progress-bar"></span> </div>
                         <span class="skill-num">90%</span>
                     </div>
                 </div>
-                <div class="col-12 col-m-4">
+                <div class="col-12 col-m-4" data-anima="up">
                     <div class="skill-item">
                         <p class="skill-nome">CSS</p>
                         <div class="skill-barra"> <span class="progress-bar"></span> </div>
                         <span class="skill-num">90%</span>
                     </div>
                 </div>
-                <div class="col-12 col-m-4">
+                <div class="col-12 col-m-4" data-anima="up">
                     <div class="skill-item">
                         <p class="skill-nome">JavaScript</p>
                         <div class="skill-barra"> <span class="progress-bar"></span> </div>
